login cotrol to corect

--- a/1frontend/00login.html
+++ b/1frontend/00login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="en">
+<head>
+		<meta charset="utf-8"/>
 		<title>P1 ERS Login</title>
 		<!-- This is a link to a bootstrap stylesheet, which will basically set a premade style for your page -->
 		<link
