JS page redirect done per Tyler 220111 for login

--- a/1frontend/employee.html
+++ b/1frontend/employee.html
@@ -17,6 +17,18 @@
 	<body>
 		<!--We need a div called container to hold all of our bootstrap styling-->
 		<div class="container">
+			<!--put User In Session Info Here for Seecurity Check-->
+		<div>
+			<table id = "user id and role">
+				<label>User Identity in Sesseion: </label>
+				<br>
+				<label>User ID: </label> <input id="currentuserid" placeholder ="User In Session " class="input col-sm-1"/>
+				<br>
+				<label>User Role: </label> <input id="currentrole" placeholder = "Role in Session" class="input col-sm-1"/>
+
+			</table>
+
+		</div>
 
 		<h3>Welcome to ERS Employee Menu</h3>
 
