--- a/1frontend/00login.html
+++ b/1frontend/00login.html
@@ -15,8 +15,21 @@
 
 	</head>
 	<body>
+		<div class="container"></div>
+		<!--put User In Session Info Here for Seecurity Check-->
+		<div>
+			<table id = "user id and role">
+				<label>User Identity in Sesseion: </label>
+				<br>
+				<label>User ID: </label> <input id="currentuserid" placeholder ="User In Session " class="input col-sm-1"/>
+				<br>
+				<label>User Role: </label> <input id="currentrole" placeholder = "Role in Session" class="input col-sm-1"/>
+
+			</table>
+
+		</div>
 		<!--We need a div called container to hold all of our bootstrap styling-->
-	<div class="container">
+	
 		
 		<h3>Welcome to the ERS Login and Registration</h3>
 
