--- a/1frontend/00login.html
+++ b/1frontend/00login.html
@@ -70,9 +70,11 @@
 					<br>
 					<button id="userroleButton" class="btn btn-info col-sm-3">User Role</button>
 					<select id="nrole" placeholder="User Role to Select" class = "select col-sm-4"/>
-						<option value = "EMPLOYEE">Employee</option>
-						<option value = "FINANCE_MANAGER">Finance Manager</option>
-					</select>	
+						<option value = "EMPLOYEE">Employee</option>  
+						<option value = "FINANCE_MANAGER">Finance Manager</option> 
+						<!-- <option value = "Employee">EMPLOYEE</option>
+						<option value = "Finance Manager">FINANCE_MANAGER</option>
+					</select>	 -->
 					<br>
 					<button id="userlnameButton" class="btn btn-info col-sm-3">Last Name</button>
 					<input id="nlname" placeholder="Last Name" class=" input col-sm-4"/>
