authsvc userdao redl

--- a/1frontend/00login.html
+++ b/1frontend/00login.html
@@ -59,30 +59,30 @@
     				
 
 					<h3>Please Enter Your Registration Information!</h3>
-					<button id="usernameinButton" class="btn btn-info col-sm-3">Username</button>
+					<!-- <button id="usernameinButton" class="btn btn-info col-sm-3">Username</button> -->
 					<input id="nusername" placeholder="Username" class=" input col-sm-4"/>
 					<br>
-					<button id="loginButton" class="btn btn-info col-sm-3">Password</button>
+					<!-- <button id="loginButton" class="btn btn-info col-sm-3">Password</button> -->
 					<input id="npassword" type="password" placeholder = "Password" class=" input col-sm-4"/>
 					<br>
-					<button id="emailButton" class="btn btn-info col-sm-3">User Email</button>
+					<!-- <button id="emailButton" class="btn btn-info col-sm-3">User Email</button> -->
 					<input id="nemail" placeholder="Email Address" class=" input col-sm-4"/>
 					<br>
-					<button id="userroleButton" class="btn btn-info col-sm-3">User Role</button>
-					<select id="nrole" placeholder="User Role to Select" class = "select col-sm-4"/>
+					<button id="userroleButton" class="btn btn-info col-sm-1">User Role</button>
+					<select id="nrole" placeholder="User Role to Select" class = "select col-sm-3"/>
 						<option value = "EMPLOYEE">Employee</option>  
 						<option value = "FINANCE_MANAGER">Finance Manager</option> 
 						<!-- <option value = "Employee">EMPLOYEE</option>
-						<option value = "Finance Manager">FINANCE_MANAGER</option>
-					</select>	 -->
+						<option value = "Finance Manager">FINANCE_MANAGER</option> -->
+					</select>	 
 					<br>
-					<button id="userlnameButton" class="btn btn-info col-sm-3">Last Name</button>
+					<!-- <button id="userlnameButton" class="btn btn-info col-sm-3">Last Name</button> -->
 					<input id="nlname" placeholder="Last Name" class=" input col-sm-4"/>
 					<br>							
-					<button id="userfnameButton" class="btn btn-info col-sm-3">First Name</button>
+					<!-- <button id="userfnameButton" class="btn btn-info col-sm-3">First Name</button> -->
 					<input id="nfname" placeholder="First Name" class=" input col-sm-4"/>
 					<br>
-					<button id="regisButton" class="btn btn-primary col-sm-7">Sumbit Registration</button>
+					<button id="regisButton" class="btn btn-primary col-sm-4">Sumbit Registration</button>
 
 
 
