--- a/1frontend/employee.html
+++ b/1frontend/employee.html
@@ -158,7 +158,7 @@
 				<button id="mupdateuButton" class="btn btn-primary">Update User</button> -->
 				<br></br>
 				<br>
-				<table id="mreimbTable" class="table table-hover table-bordered table-dark">
+				<table id="euserTable" class="table table-hover table-bordered table-dark">
 				<thead>
 					<tr>
 						<th class = "thead col-sm-1"">Username</th>
